addons/web/static/src/core/checkbox/checkbox.scss
.o-checkbox {
    width: fit-content;
}

